[package]
name = "obchod_import"
version = "0.3.4"
edition = "2024"

[dependencies]
slint = "1.8"
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
calamine = "0.24"
chrono = { version = "0.4", features = ["serde"] }                              

[build-dependencies]
slint-build = "1.8"